    $ svn log svn://svn.r-forge.r-project.org/svnroot/datatable

This NEWS file summarises the main changes.

        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.6.3   **
        **                                         **
        *********************************************



        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.6.2   **
        **                                         **
        *********************************************

NEW FEATURES

   o    setkey no longer copies the whole table and should be
        faster for large tables. Each column is reordered by reference
        (in C) using one column of working memory, FR#1006. User
        defined attributes on the original table are now also
        retained (thanks to Thell Fowler for reporting).
        
   o    A new symbol .N is now available to j, containing the
        number of rows in the group. This may be useful when
        the column names are not known in advance, for
        convenience generally, and for efficiency.
        

        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.6.1   **
        **                                         **
        *********************************************
        
NEW FEATURES

   o    j's environment is now consistently reused so
        that local variables may be set which persist
        from group to group; e.g., incrementing a group
        counter :
            DT[,list(z,groupInd<-groupInd+1),by=x]
        Thanks to Andreas Borg for reporting.

   o    A new symbol .BY is now available to j, containing 1 row
        of the current 'by' variables, type list. 'by' variables